[package]
name = "jjump"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
serde_yaml = "0"
thiserror = "1"
xdg = "2"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.clap]
version = "4"
features = ["derive"]
